# llm-as-a-judge-for-evaluating-document-extraction-capabilities-of-llms

./: .gitignore  ablation.py  benchmark.py  bundle.py  deposit.py  eval_bundle.py  evaluation.py  first_bundle_config.yaml  inspect_run.py  judge.py  leaderboard.py  licenses.json  main.py  parse.py  plot_ablation.py  prompt.txt  pyproject.toml  run.py  rwth_bundle_config.yaml  schema.py  script.py  test_oa.py  viewer.py
ablation_configs/: openai_oss_120b.yaml  openai_oss_120b_prompt_v1.yaml  openai_oss_120b_prompt_v2.yaml  openai_oss_120b_prompt_v3.yaml  openai_oss_120b_prompt_v4.yaml  openai_oss_120b_r1.yaml
analysis/: adjudicate.py  disagreements.py  threshold_sensitivity.py
benchmark_configs/openai_oss_120b_config/: openai_oss_120b.yaml  openai_oss_120b_v2.yaml
core/: bundle.py  calibration.py  deposit.py  evaluation.py  extraction.py  inspect_view.py  judge.py  licensing.py  parse.py  paths.py  schema.py  sweep.py  tracking.py  utils.py
deposit/: eval_bundle.py
deposit/core/: evaluation.py  extraction.py  paths.py  sweep.py
judge_configs/: judge_gpt55_v1.yaml  judge_mistral_v1.yaml
non_uniform_prompts/: openai_oss_120b_prompt_v1.txt  openai_oss_120b_prompt_v3.txt
prompts/: judge_rubric_v1.txt  openai_oss_120b_prompt_v2.txt  openai_oss_120b_prompt_v3.txt  prompt.txt
