[project]
name = "llm-as-a-judge-for-evaluating-document-extraction-capabilities-of-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.110.0",
    "envyaml>=1.10.211231",
    "litellm>=1.91.0",
    "numpy>=2.5.1",
]
